--- a/src/components/room-info-card/room-info-card.pug
+++ b/src/components/room-info-card/room-info-card.pug
@@ -4,7 +4,7 @@ include ./../rate-btn/rate-btn
 mixin room-info-card(params)
     - const { number, type, price, photos, reviewsCount, rating } = params;
     - const { getNoun } = require('./../../utils');
-    - const { baseUrl } = require('./../../config');
+    - const { baseUrl } = self.htmlWebpackPlugin.options;
     - const LINK = `${baseUrl}room-details.html`;
 
     div.room-info-card
@@ -13,8 +13,8 @@ mixin room-info-card(params)
                 for photoName in photos
                     div.room-info-card__slide
                         img(
-                            src=`assets/img/${photoName}.jpg`
-                            srcset=`assets/img/${photoName}@2x.jpg 2x`
+                            src=require(`./../../assets/img/${photoName}.jpg`)
+                            srcset=require(`./../../assets/img/${photoName}@2x.jpg`) + ' 2x'
                             alt=`Комната №${number}`
                         )
             div.room-info-card__info
