--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -6,6 +6,42 @@
     box-sizing: border-box;
 }
 
+.dropdown__selection {
+    width: 100%;
+    //padding-right: 20px;
+
+    font-size: 14px;
+    line-height: 24px;
+    color: $color__dark-shade75;
+
+    // https://css-tricks.com/almanac/properties/t/text-overflow/
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown__more-icon {
+    position: absolute;
+    right: 8px;
+    transform: translateY(2px);
+
+    color: $color__dark-shade50;
+    //transform: translateX(6px);
+}
+
+.dropdown__controls {
+    display: flex;
+    margin-top: -15px; // last option item margin-bottom
+    padding-top: 20px; // controls should receive click
+}
+
+.dropdown__apply-btn {
+    margin-left: auto;
+}
+
 .dropdown {
     // Important for overriding specificity of rules in item-quantity-dropdown
     .iqdropdown {
@@ -24,34 +60,19 @@
         }
     }
 
-    .dropdown__selection {
-        font-family: $font__main !important;
-        font-size: 14px !important;
-        line-height: 24px !important;
-
-        &::after {
-            display: none !important;
-        }
-    }
-
     .dropdown__menu {
         top: calc(100% + 2px) !important;
 
         padding: 7px 14px 14px !important;
-        box-shadow: none !important;
 
         border: 1px solid $color__dark-shade50 !important;
         border-radius: 0 0 2px 2px !important;
+        box-shadow: $shadow__light;
     }
 
     .dropdown__option {
         height: auto !important;
-        margin-bottom: 15px !important;
-        padding: 0 !important;
-
-        &:last-child {
-            margin-bottom: 0 !important;
-        }
+        padding: 0 0 7px !important;
     }
 
     .dropdown__item {
@@ -131,18 +152,4 @@
 
         border: none !important;
     }
-}
-
-.dropdown__more-icon {
-    transform: translateX(6px);
-}
-
-.dropdown__controls {
-    display: flex;
-    margin-top: -15px; // last option item margin-bottom
-    padding-top: 20px; // controls should receive click
-}
-
-.dropdown__apply-btn {
-    margin-left: auto;
 }
