--- a/src/pages/search-room/search-room.pug
+++ b/src/pages/search-room/search-room.pug
@@ -67,84 +67,84 @@ block content
                 +room-info-card({
                   number: 888,
                   price: 9990,
-                  photos: ['room1'],
+                  photos: ['room-1', 'room-2', 'room-3', 'room-4'],
                   reviewsCount: 145,
                   rating: 5,
                 })
                 +room-info-card({
                   number: 840,
                   price: 9900,
-                  photos: ['room1'],
+                  photos: ['room-2', 'room-2', 'room-3', 'room-4'],
                   reviewsCount: 65,
                   rating: 4,
                 })
                 +room-info-card({
                   number: 980,
                   price: 8500,
-                  photos: ['room1'],
+                  photos: ['room-3', 'room-2', 'room-3', 'room-4'],
                   reviewsCount: 35,
                   rating: 3,
                 })
                 +room-info-card({
                   number: 856,
                   price: 7300,
-                  photos: ['room1'],
+                  photos: ['room-4', 'room-2', 'room-3', 'room-4'],
                   reviewsCount: 19,
                   rating: 5,
                 })
                 +room-info-card({
                   number: 740,
                   price: 6000,
-                  photos: ['room1'],
+                  photos: ['room-5', 'room-2', 'room-3', 'room-4'],
                   reviewsCount: 44,
                   rating: 4,
                 })
                 +room-info-card({
                   number: 982,
                   price: 5800,
-                  photos: ['room1'],
+                  photos: ['room-6', 'room-2', 'room-3', 'room-4'],
                   reviewsCount: 56,
                   rating: 3,
                 })
                 +room-info-card({
                   number: 678,
                   price: 5500,
-                  photos: ['room1'],
+                  photos: ['room-7', 'room-2', 'room-3', 'room-4'],
                   reviewsCount: 45,
                   rating: 5,
                 })
                 +room-info-card({
                   number: 450,
                   price: 5300,
-                  photos: ['room1'],
+                  photos: ['room-8', 'room-2', 'room-3', 'room-4'],
                   reviewsCount: 39,
                   rating: 4,
                 })
                 +room-info-card({
                   number: 350,
                   price: 5000,
-                  photos: ['room1'],
+                  photos: ['room-9', 'room-2', 'room-3', 'room-4'],
                   reviewsCount: 77,
                   rating: 3,
                 })
                 +room-info-card({
                   number: 666,
                   price: 5000,
-                  photos: ['room1'],
+                  photos: ['room-10', 'room-2', 'room-3', 'room-4'],
                   reviewsCount: 25,
                   rating: 5,
                 })
                 +room-info-card({
                   number: 444,
                   price: 5000,
-                  photos: ['room1'],
+                  photos: ['room-11', 'room-2', 'room-3', 'room-4'],
                   reviewsCount: 15,
                   rating: 3,
                 })
                 +room-info-card({
                   number: 352,
                   price: 5000,
-                  photos: ['room1'],
+                  photos: ['room-12', 'room-2', 'room-3', 'room-4'],
                   reviewsCount: 55,
                   rating: 3,
                 })
